# Android_test

./: .gitignore
MyCameraApp/app/: CMakeLists.txt  build.gradle
MyCameraApp/app/src/androidTest/java/com/example/ubuntu/mycameraapp/: ExampleInstrumentedTest.java
MyCameraApp/app/src/main/: AndroidManifest.xml
MyCameraApp/app/src/main/cpp/: native-lib.cpp
MyCameraApp/app/src/main/cpp/include/: cvtest.h  functions.h  mylog.h
MyCameraApp/app/src/main/cpp/source/: cvtest.cpp  functions.cpp
MyCameraApp/app/src/main/java/com/example/ubuntu/mycameraapp/: MainActivity.java  Singleton_Native.java
MyCameraApp/app/src/main/res/layout/: activity_main.xml
MyCameraApp/app/src/main/res/values/: strings.xml
MyCameraApp/app/src/test/java/com/example/ubuntu/mycameraapp/: ExampleUnitTest.java
MyCameraApp/gradle/wrapper/: gradle-wrapper.properties
